Bug 1308007 - Add a pref to allow files in DataTransfer from paste again. r=nika

Differential Revision: https://phabricator.services.mozilla.com/D153100